style home and pharm

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,24 @@
 <div class="footer">
-  <span>
-    <img src="../../assets/icons/mail.svg" />
-    hadasyosef2&#64;gmail.com
+  <span class="info">
+    <img class="icon" src="../../assets/icons/mail.svg" />
+    <a
+      class="link underline"
+      href="https://mail.google.com/mail/?view=cm&fs=1&to=hadasyosef2@gmail.com"
+      target="_blank"
+      >hadasyosef2&#64;gmail.com</a
+    >
   </span>
-  <span>
-    <img src="../../assets/icons/phone.svg" />
-    +972506622002
+  <span class="info">
+    <img class="icon" src="../../assets/icons/phone.svg" />
+    <a class="link underline" href="tel:+972506622002">+972506622002</a>
   </span>
-  <span>
-    <img src="../../assets/icons/linkedin.svg" />
-    hadasyosef/
+  <span class="info">
+    <img class="icon" src="../../assets/icons/linkedin.svg" />
+    <a
+      class="link"
+      href="https://www.linkedin.com/in/hadasyosef/"
+      target="_blank"
+      >hadasyosef/</a
+    >
   </span>
 </div>
