--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,43 +1,52 @@
 <app-header></app-header>
 
 <div class="home">
-  <img src="../../assets/hadas.svg" />
-
-  <div class="intro">
-    <span>HI, I'm Hadas</span>
-    <span>product designer</span>
-    <span>I design systems that make a difference for the Israeli Navy</span>
+  <div class="header">
+    <img class="photo" src="../../assets/hadas.svg" />
+    <div class="intro">
+      <span class="header">Hi, I'm Hadas</span>
+      <span class="title">product designer</span>
+      <span class="sentence"
+        >I design systems that make a difference for the Israeli Navy</span
+      >
+    </div>
   </div>
 
-  <img src="../../assets/threat.svg" />
-  <img src="../../assets/pharmYarok.svg" />
+  <div class="projects">
+    <img src="../../assets/threat.svg" />
+    <img src="../../assets/pharmYarok.svg" />
+  </div>
 
   <div class="about">
-    <mat-card>
+    <mat-card class="about-me">
       <mat-card-header>About me</mat-card-header>
       <mat-card-content>
-        I am a driven, passionate, and eager designer, with 3 years of
-        experience. <br />
-        <b>I currently work for the Israeli Navy</b> where I specialize in
-        complex systems which is a true passion of mine. I enjoy collaborating
-        with other designers and developers and learning from them. <br />
-        I’m also a 2nd year
-        <b> psychology student at the Open University.</b> The knowledge I gain
-        in my studies helps tremendously to understand human behavior and its
-        flaws and allows me to create better user experiences.
+        <span>
+          I am a driven, passionate, and eager designer, with 3 years of
+          experience.
+        </span>
+        <span>
+          <b>I currently work for the Israeli Navy</b> where I specialize in
+          complex systems which is a true passion of mine. I enjoy collaborating
+          with other designers and developers and learning from them.</span
+        >
+        <span
+          >I'm also a 2nd year
+          <b> psychology student at the Open University.</b> The knowledge I
+          gain in my studies helps tremendously to understand human behavior and
+          its flaws and allows me to create better user experiences.</span
+        >
       </mat-card-content>
     </mat-card>
-    <mat-card>
+    <mat-card class="fun-facts">
       <mat-card-header
-        >Fun Facts <img src="../../assets/icons/stars.svg"
+        >Fun Facts <img class="stars" src="../../assets/icons/stars.svg"
       /></mat-card-header>
       <mat-card-content>
-        <span>
-          Favorite food: Pancakes. <br />
-          Hobbies: working out, baking & making textured art. <br />
-          TV genres: sitcoms, fantasies and dramas. Currently <br />
-          learning: Spanish.
-        </span>
+        <span>Favorite food: Pancakes.</span>
+        <span>Hobbies: working out, baking & making textured art.</span>
+        <span>TV genres: sitcoms, fantasies and dramas. Currently</span>
+        <span>learning: Spanish.</span>
       </mat-card-content>
     </mat-card>
   </div>
