--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,17 +1,87 @@
 .home {
   display: flex;
   flex-direction: column;
-
   align-items: center;
+
+  .header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+
+    .photo {
+      width: 8rem;
+      height: 8rem;
+    }
+
+    .intro {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      gap: 0.75rem;
+
+      .header {
+        font-size: 5rem;
+        font-weight: 700;
+        background: linear-gradient(90deg, #3d87f6, #a53df6);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+
+      .title {
+        font-size: 1.5rem;
+        color: #4f4f4f;
+        font-weight: 500;
+      }
+
+      .sentence {
+        font-size: 1.5rem;
+        font-weight: 500;
+      }
+    }
+  }
+
+  .projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5rem;
+  }
 
   .about {
     display: flex;
-  }
+    gap: 2.75rem;
+    background-image: radial-gradient(#9746f6, #5873f6, 0.5rem, transparent 0);
+    background-size: 2.5rem 2.5rem;
 
-  .intro {
-    display: flex;
-    flex-direction: column;
+    .about-me {
+      max-width: 50rem;
+    }
 
-    text-align: center;
+    .fun-facts {
+      max-width: 35rem;
+    }
+
+    .mat-mdc-card {
+      border: 2px #e7e7e7 solid;
+      gap: 1.5rem;
+
+      .mat-mdc-card-header {
+        font-size: 2.5rem;
+        font-weight: 700;
+
+        .stars {
+          margin-left: 1rem;
+        }
+      }
+
+      .mat-mdc-card-content {
+        display: flex;
+        flex-direction: column;
+        font-size: 1.125rem;
+        gap: 1.5rem;
+      }
+    }
   }
 }
