--- a/src/app/pharm-yarok/pharm-yarok.component.html
+++ b/src/app/pharm-yarok/pharm-yarok.component.html
@@ -1,58 +1,60 @@
-<div>
-  <img src="../../assets/pharmYarok/header.svg" />
+<div class="pharm-yarok">
+  <img class="image" src="../../assets/pharmYarok/header.svg" />
 
-  <div class="paragraph">
-    <span>Overview</span>
-    <span>
-      Pharm Yarok sells medicinal cannabis mostly through phone and WhatsApp.
-      <br />
-      Their app is outdated and inefficient. <br />
-      The target audience is Cannabis patients aged 20-45.
-    </span>
-  </div>
-  <div class="paragraph">
-    <span>The challenge</span>
-    <span>
-      Redesign the app to improve usability, make ordering easier and convenient
-      for future purchases, <br />
-      to encourage users to purchase on the app.
-    </span>
+  <div class="overview">
+    <div class="paragraph">
+      <span class="header">Overview</span>
+      <span>
+        Pharm Yarok sells medicinal cannabis mostly through phone and WhatsApp.
+        <br />
+        Their app is outdated and inefficient. <br />
+        The target audience is Cannabis patients aged 20-45.
+      </span>
+    </div>
+    <div class="paragraph">
+      <span class="header">The challenge</span>
+      <span>
+        Redesign the app to improve usability, make ordering easier and
+        convenient for future purchases, <br />
+        to encourage users to purchase on the app.
+      </span>
+    </div>
   </div>
 
   <div class="user-story">
-    <div class="paragraph">
-      <img src="../../assets/pharmYarok/userStory1.svg" />
+    <div class="story">
+      <img class="image" src="../../assets/pharmYarok/userStory1.svg" />
       <span
-        >Avi is texting with the pharmacy’s reps to get info on strains to
+        >Avi is texting with the pharmacy's reps to get info on strains to
         buy.</span
       >
     </div>
-    <div class="paragraph">
-      <img src="../../assets/pharmYarok/userStory2.svg" />
+    <div class="story">
+      <img class="image" src="../../assets/pharmYarok/userStory2.svg" />
       <span
         >Avi is disappointed by the lack of info, recommendations, and images.
       </span>
     </div>
-    <div class="paragraph">
-      <img src="../../assets/pharmYarok/userStory3.svg" />
+    <div class="story">
+      <img class="image" src="../../assets/pharmYarok/userStory3.svg" />
       <span>Avi decides to search strains on the app.</span>
     </div>
-    <div class="paragraph">
-      <img src="../../assets/pharmYarok/userStory4.svg" />
+    <div class="story">
+      <img class="image" src="../../assets/pharmYarok/userStory4.svg" />
       <span
         >Avi quickly finds the info and images he needed and places an
         order.</span
       >
     </div>
-    <div class="paragraph">
-      <img src="../../assets/pharmYarok/userStory5.svg" />
+    <div class="story">
+      <img class="image" src="../../assets/pharmYarok/userStory5.svg" />
       <span>Avi got the order, and he's relieved to have his medicine.</span>
     </div>
   </div>
 
-  <div>
-    <div class="paragraph">
-      <span>Research</span>
+  <div class="research">
+    <div class="research">
+      <span class="header">Research</span>
       <span>
         I began the project by benchmarking similar apps to understand the
         features that users expect and identify areas for improvement. <br />
@@ -60,175 +62,235 @@
         strains.
       </span>
     </div>
-    <div class="user-story">
-      <mat-card>
-        <mat-card-header>question</mat-card-header>
+    <div class="cards">
+      <div class="questions">
+        <mat-card>
+          <mat-card-header><span class="chip">question</span></mat-card-header>
+          <mat-card-content>
+            <span class="bold"
+              >What helps decide which cannabis strain to buy?</span
+            >
+            <span class="answer filler"
+              >Knowing which cannabis strain is right for a specific condition,
+              and following the majority's choice.</span
+            >
+          </mat-card-content>
+        </mat-card>
+        <mat-card>
+          <mat-card-header><span class="chip">question</span></mat-card-header>
+          <mat-card-content>
+            <span class="bold"
+              >What difficulties have you experienced trying to buy
+              cannabis?</span
+            >
+            <span class="answer"
+              >“It's hard to make a decision”<br />
+              The pharmacy doesn't provide enough info on flavours, effects,
+              images, or reviews, making it impossible to make an informed
+              decision. You're left guessing what to get.</span
+            >
+          </mat-card-content>
+        </mat-card>
+      </div>
+      <mat-card class="insight">
+        <mat-card-header><span class="chip">Insight</span></mat-card-header>
         <mat-card-content>
-          What helps decide which cannabis strain to buy?
-          <span
-            >Knowing which cannabis strain is right for a specific condition,
-            and following the majority's choice.</span
-          >
+          <span class="bold"
+            >Patients search for medical cannabis in different ways.</span
+          >Some search by popularity, others by THC/CBD levels, while others
+          look for specific brands or price points.
         </mat-card-content>
       </mat-card>
-      <mat-card>
-        <mat-card-header>question</mat-card-header>
-        <mat-card-content>
-          What difficulties have you experienced trying to buy cannabis?
-          <span
-            >“It’s hard to make a decision” The pharmacy doesn't provide enough
-            info on flavours, effects, images, or reviews, making it impossible
-            to make an informed decision. You're left guessing what to
-            get.</span
-          >
-        </mat-card-content>
-      </mat-card>
-    </div>
-    <mat-card>
-      <mat-card-header>Insight</mat-card-header>
-      <mat-card-content>
-        Patients search for medical cannabis in different ways. Some search by
-        popularity, others by THC/CBD levels, while others look for specific
-        brands or price points.
-      </mat-card-content>
-    </mat-card>
-    <div class="user-story">
-      <mat-card>
-        <mat-card-header>Problem</mat-card-header>
-        <mat-card-content>
-          Limited search: The only supported way of searching is by brand.
-        </mat-card-content>
-      </mat-card>
-      <mat-card>
-        <mat-card-header>Problem</mat-card-header>
-        <mat-card-content>
-          Missing cart: Unclear what's added after the products page.
-        </mat-card-content>
-      </mat-card>
-    </div>
-    <div class="user-story">
-      <mat-card>
-        <mat-card-header>Problem</mat-card-header>
-        <mat-card-content>
-          Missing sign up: Users have to reupload their cannabis license.
-        </mat-card-content>
-      </mat-card>
-      <mat-card>
-        <mat-card-header>Problem</mat-card-header>
-        <mat-card-content>
-          Lack of images: Patients want to see what they’re buying.
-        </mat-card-content>
-      </mat-card>
+      <div class="problems">
+        <mat-card>
+          <mat-card-header><span class="chip">Problem</span></mat-card-header>
+          <mat-card-content class="problem-content">
+            <span class="bold">Limited search:</span> The only supported way of
+            searching is by brand.
+          </mat-card-content>
+        </mat-card>
+        <mat-card>
+          <mat-card-header><span class="chip">Problem</span></mat-card-header>
+          <mat-card-content class="problem-content">
+            <span class="bold">Missing cart:</span> Unclear what's added after
+            the products page.
+          </mat-card-content>
+        </mat-card>
+      </div>
+      <div class="problems">
+        <mat-card>
+          <mat-card-header><span class="chip">Problem</span></mat-card-header>
+          <mat-card-content class="problem-content">
+            <span class="bold">Missing sign up:</span> Users have to reupload
+            their cannabis license.
+          </mat-card-content>
+        </mat-card>
+        <mat-card>
+          <mat-card-header><span class="chip">Problem</span></mat-card-header>
+          <mat-card-content class="problem-content">
+            <span class="bold">Lack of images:</span> Patients want to see what
+            they're buying.
+          </mat-card-content>
+        </mat-card>
+      </div>
     </div>
   </div>
 
-  <div>
+  <div class="personas">
     <div class="paragraph">
-      <span>Personas</span>
+      <span class="header">Personas</span>
       <span>
         Based on my research, I mapped 3 types of users to reflect on them when
         making decisions.
       </span>
-      <div class="user-story">
-        <div class="paragraph">
+      <div class="personas">
+        <div class="persona">
           <img src="../../assets/pharmYarok/person1.svg" />
-          <span>Leisure buyer</span>
-          <span>
-            They smoke for fun, and like trying popular strains with high THC
-            levels.
-          </span>
-          <span> Needs & expectations: Fast delivery and freebies. </span>
-          <span> Goals: being among the firsts to try new strains. </span>
-          <span> Frustrations: Waiting for the delivery. </span>
+          <div class="person-info">
+            <span class="person">Leisure buyer</span>
+            <span>
+              They smoke for fun, and like trying popular strains with high THC
+              levels.
+            </span>
+            <span
+              ><span class="bold">Needs & expectations:</span> <br />Fast
+              delivery and freebies.
+            </span>
+            <span
+              ><span class="bold">Goals:</span> being among the firsts to try
+              new strains.
+            </span>
+            <span
+              ><span class="bold">Frustrations:</span> <br />Waiting for the
+              delivery.
+            </span>
+          </div>
         </div>
-        <div class="paragraph">
+        <div class="persona">
           <img src="../../assets/pharmYarok/person2.svg" />
-          <span>Carrier</span>
-          <span>
-            The carrier handles someone else's orders, since they're not able
-            to.
-          </span>
-          <span>
-            Needs & expectations: making the same order every month quickly.
-          </span>
-          <span
-            >Goals: having the same strains to keep a therapeutic sequence.
-          </span>
-          <span> Frustrations: when the usual order is out of stock. </span>
+          <div class="person-info">
+            <span class="person">Carrier</span>
+            <span>
+              The carrier handles someone else's orders, since they're not able
+              to.
+            </span>
+            <span>
+              <span class="bold">Needs & expectations:</span> making the
+              <br />same order every month quickly.
+            </span>
+            <span
+              ><span class="bold">Goals:</span> having the same strains to keep
+              a therapeutic sequence.
+            </span>
+            <span
+              ><span class="bold">Frustrations:</span> when the usual order is
+              out of stock.
+            </span>
+          </div>
         </div>
-        <div class="paragraph">
+        <div class="persona">
           <img src="../../assets/pharmYarok/person3.svg" />
-          <span>Outlet buyer</span>
-          <span>
-            They’re patients for many years, and usually reorder the same
-            strains.
-          </span>
-          <span>Needs & expectations: Getting affordable treatment. </span>
-          <span>Goals: Keeping a therapeutic sequence.</span>
-          <span>Frustrations: there’s no variety of discounted strains. </span>
+          <div class="person-info">
+            <span class="person">Outlet buyer</span>
+            <span>
+              They're patients for many years, and usually reorder the same
+              strains.
+            </span>
+            <span
+              ><span class="bold">Needs & expectations:</span> <br />Getting
+              affordable treatment.
+            </span>
+            <span
+              ><span class="bold">Goals:</span> <br />Keeping a therapeutic
+              sequence.</span
+            >
+            <span
+              ><span class="bold">Frustrations:</span> there's no variety of
+              discounted strains.
+            </span>
+          </div>
         </div>
       </div>
     </div>
-    <div>
-      The Soulution
-      <span>
-        The revamped app simplifies medicinal cannabis ordering by providing
-        patients with insightful treatment decisions and facilitating quick,
-        effortless ordering.
-      </span>
-    </div>
   </div>
 
-  <div>
-    Wireframes
+  <div class="solution">
+    <span class="header">The solution</span>
+    <span>
+      The revamped app simplifies medicinal cannabis ordering by providing
+      patients with insightful treatment decisions <br />
+      and facilitating quick, effortless ordering.
+    </span>
+  </div>
+
+  <div class="wireframe">
     <div class="paragraph">
-      The search page
+      <div class="headers">
+        <span class="semi-header">Wireframes</span>
+        <span class="header"> The search page </span>
+      </div>
       <span>
         To help users find the strains they're looking for easily, I categorized
-        the products according to the most common factors that patients consider
-        when choosing a strain: dose, newness, brand, popularity, and discounted
-        price.
+        the products according to the most common factors that <br />patients
+        consider when choosing a strain: dose, newness, brand, popularity, and
+        discounted price.
       </span>
     </div>
-    <div class="user-story">
-      <div class="paragraph">
+    <div class="images">
+      <div class="image">
         <img src="../../assets/pharmYarok/wireframe-old.svg" />
         <span>Old</span>
       </div>
       <img src="../../assets/icons/right-arrow.svg" />
-      <div class="paragraph">
+      <div class="image">
         <img src="../../assets/pharmYarok/wireframe-new.svg" />
         <span>New</span>
       </div>
     </div>
   </div>
 
-  <div>
-    Final design
+  <div class="final-design">
     <div class="paragraph">
-      Adding products to the cart
-      <span>The problems I addressed were:</span>
-      <span>
-        Missing cart: Unclear what's added after the products page. Lack of
-        images: Patients want to see what they're buying.
-      </span>
-      <span>The solutions:</span>
-      <span>
-        Adding a cart to provide clarity & allow users to leave the process and
-        return later without interruption. Making POP products more accessible I
-        added a POP products section to the cart with images and descriptions to
-        boost sales.
-      </span>
+      <div class="headers">
+        <span class="semi-header">Final design</span>
+        <span class="header">Adding products to the cart</span>
+      </div>
+      <div class="content">
+        <span class="problem bold">The problems I addressed were:</span>
+        <span class="para">
+          <span>
+            <span class="bold">Missing cart:</span> Unclear what's added after
+            the products page.
+          </span>
+          <span>
+            <span class="bold">Lack of images:</span> Patients want to see what
+            they're buying.
+          </span>
+        </span>
+        <span class="solution bold">The solutions:</span>
+        <span class="para">
+          <span>
+            <span class="bold">Adding a cart</span> to provide clarity & allow
+            users to leave <br />the process and return later without
+            interruption.<br />
+          </span>
+          <span class="col">
+            <span class="bold"> Making POP products more accessible </span> I
+            added a POP products section to the cart with <br />images and
+            descriptions to boost sales.
+          </span>
+        </span>
+      </div>
     </div>
-    <div class="user-story">
+    <div class="images">
       <img src="../../assets/pharmYarok/final1.svg" />
       <img src="../../assets/pharmYarok/final2.svg" />
     </div>
   </div>
 
-  <div>
-    Checkout process
-    <div class="user-story">
+  <div class="checkout">
+    <span class="header">Checkout process</span>
+    <div class="images">
       <img src="../../assets/pharmYarok/checkout1.svg" />
       <img src="../../assets/pharmYarok/checkout2.svg" />
       <img src="../../assets/pharmYarok/checkout3.svg" />
@@ -236,31 +298,42 @@
     </div>
   </div>
 
-  <div class="user-story">
-    Order tracking
-    <img src="../../assets/pharmYarok/order1.svg" />
-    <img src="../../assets/pharmYarok/order2.svg" />
-    <div>
-      <span>The problem:</span>
-      <span
-        >Lack of delivery info leading to cancellations: Patients would have to
-        contact the pharmacy to get delivery details, or await contact. most
-        people would get tired waiting and purchase someplace else.</span
-      >
-      <span>The solutions:</span>
-      <span>
-        Providing clear feedback & setting expectations: After placing an order,
-        the success page helps inform the patient about the timeline of the
-        order.
-      </span>
-      <span>
-        Allocating space for order tracking: After placing an order, the info,
-        status and ETA will be visible at the top of the search page.
-      </span>
+  <div class="order-tracking">
+    <div class="images">
+      <img src="../../assets/pharmYarok/order1.svg" />
+      <img src="../../assets/pharmYarok/order2.svg" />
+    </div>
+    <div class="paragraph">
+      <span class="header">Order tracking</span>
+      <div class="content">
+        <span class="problem bold">The problem:</span>
+        <span class="para">
+          <span class="bold"
+            >Lack of delivery info leading to cancellations:</span
+          >Patients would have to contact the pharmacy to get <br />delivery
+          details, or await contact. most people would <br />get tired waiting
+          and purchase someplace else.
+        </span>
+        <span class="solution bold">The solutions:</span>
+        <span class="para">
+          <span class="col">
+            <span class="bold"
+              >Providing clear feedback & setting expectations:</span
+            >
+            After placing an order, the success page helps inform <br />the
+            patient about the timeline of the order.
+          </span>
+          <span class="col">
+            <span class="bold">Allocating space for order tracking:</span>After
+            placing an order, the info, status and ETA will be <br />visible at
+            the top of the search page.
+          </span>
+        </span>
+      </div>
     </div>
   </div>
 
-  <img src="../../assets/pharmYarok/overview.svg" />
+  <img class="image" src="../../assets/pharmYarok/overview.svg" />
 </div>
 
 <app-footer></app-footer>
