--- a/src/app/pharm-yarok/pharm-yarok.component.scss
+++ b/src/app/pharm-yarok/pharm-yarok.component.scss
@@ -1,9 +1,408 @@
-.paragraph {
+.pharm-yarok {
   display: flex;
   flex-direction: column;
-}
+  gap: 8.25rem;
 
-.user-story {
-  display: flex;
-  flex-direction: row;
+  .image {
+    width: 100%;
+  }
+
+  .overview {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    width: 70rem;
+    align-self: center;
+
+    .paragraph {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      .header {
+        font-size: 1.75rem;
+        font-weight: 600;
+      }
+    }
+  }
+
+  .user-story {
+    display: flex;
+    gap: 1.5rem;
+    max-width: 100rem;
+    align-self: center;
+
+    .story {
+      display: flex;
+      flex-direction: column;
+
+      .image {
+        width: 18.75rem;
+        height: 12.5rem;
+      }
+    }
+  }
+
+  .research {
+    display: flex;
+    flex-direction: column;
+    max-width: 70rem;
+    align-self: center;
+    gap: 1rem;
+
+    .research {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      align-self: flex-start;
+
+      .header {
+        font-size: 1.75rem;
+        font-weight: 600;
+      }
+    }
+
+    .cards {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1.5rem;
+
+      .questions {
+        display: flex;
+        gap: 1.5rem;
+
+        .chip {
+          color: #6584e2;
+          background: #f3f6ff;
+          border-radius: 3.125rem;
+          padding: 0.25rem 0.5rem;
+        }
+
+        .answer {
+          border-left: 4px #6584e2 solid;
+          padding-left: 0.5rem;
+        }
+
+        .filler::after {
+          content: "";
+          height: 2.5rem;
+          display: flex;
+          visibility: visible;
+        }
+      }
+
+      .insight {
+        width: 100% !important;
+        max-width: 100% !important;
+
+        .chip {
+          color: #5d9087;
+          background: #ebf8f5;
+          border-radius: 3.125rem;
+          padding: 0.25rem 0.5rem;
+        }
+      }
+
+      .problems {
+        display: flex;
+        gap: 1.5rem;
+        width: 100%;
+
+        .chip {
+          color: #b26767;
+          background: #fff3f3;
+          border-radius: 3.125rem;
+          padding: 0.25rem 0.5rem;
+        }
+
+        .problem-content {
+          flex-direction: row !important;
+        }
+      }
+
+      .bold {
+        font-weight: 500;
+      }
+
+      .mat-mdc-card {
+        border: 1px #e7e7e7 solid;
+        gap: 0.5rem;
+        max-width: 34.25rem;
+        flex: 1;
+
+        .mat-mdc-card-header {
+          font-size: 1rem;
+          font-weight: 500;
+        }
+
+        .mat-mdc-card-content {
+          display: flex;
+          flex-direction: column;
+          gap: 0.5rem;
+        }
+      }
+    }
+  }
+
+  .personas {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    width: 70rem;
+    align-self: center;
+
+    .paragraph {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      .header {
+        font-size: 1.75rem;
+        font-weight: 600;
+      }
+    }
+
+    .personas {
+      display: flex;
+      flex-direction: row;
+
+      .persona {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        border: 1px #e2e2e2 solid;
+        border-radius: 0.5rem;
+
+        .person-info {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+          padding: 0 1.5rem 1.5rem 1.5rem;
+
+          .person {
+            font-size: 1.5rem;
+            font-weight: 600;
+          }
+
+          .bold {
+            font-size: 1.125rem;
+            font-weight: 600;
+          }
+        }
+      }
+    }
+  }
+
+  .solution {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 70rem;
+    align-self: center;
+
+    .header {
+      font-size: 1.75rem;
+      font-weight: 600;
+    }
+  }
+
+  .wireframe {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    width: 70rem;
+    align-self: center;
+
+    .paragraph {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      .headers {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+
+        .semi-header {
+          font-size: 1.25rem;
+          font-weight: 500;
+        }
+
+        .header {
+          font-size: 1.75rem;
+          font-weight: 600;
+        }
+      }
+    }
+
+    .images {
+      display: flex;
+      align-self: center;
+      gap: 5.625rem;
+
+      .image {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        font-size: 1rem;
+        font-weight: 500;
+      }
+    }
+  }
+
+  .final-design {
+    display: flex;
+    gap: 4.5rem;
+    width: 70rem;
+    align-self: center;
+
+    .paragraph {
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+
+      .headers {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+
+        .semi-header {
+          font-size: 1.25rem;
+          font-weight: 500;
+        }
+
+        .header {
+          font-size: 1.75rem;
+          font-weight: 600;
+        }
+      }
+
+      .content {
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+        padding-left: 1rem;
+
+        .para {
+          display: flex;
+          flex-direction: column;
+          padding-left: 1rem;
+          width: max-content;
+          gap: 1rem;
+
+          .col {
+            display: flex;
+            flex-direction: column;
+          }
+        }
+
+        .problem {
+          border-left: 4px #b26767 solid;
+          padding-left: 1rem;
+        }
+
+        .solution {
+          border-left: 4px #5d9087 solid;
+          padding-left: 1rem;
+          align-self: flex-start;
+        }
+
+        .bold {
+          font-weight: 500;
+        }
+      }
+    }
+
+    .images {
+      display: flex;
+      gap: 2.5rem;
+    }
+
+    span {
+      width: fit-content;
+    }
+  }
+
+  .checkout {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    width: 70rem;
+    align-self: center;
+
+    .header {
+      font-size: 1.75rem;
+      font-weight: 600;
+    }
+
+    .images {
+      display: flex;
+      gap: 5rem;
+      align-self: center;
+    }
+  }
+
+  .order-tracking {
+    display: flex;
+    gap: 4.5rem;
+    width: 70rem;
+    align-self: center;
+
+    .images {
+      display: flex;
+      gap: 2.5rem;
+    }
+
+    .paragraph {
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+
+      .header {
+        font-size: 1.75rem;
+        font-weight: 600;
+      }
+
+      .content {
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+        padding-left: 1rem;
+
+        .para {
+          display: flex;
+          flex-direction: column;
+          padding-left: 1rem;
+          width: max-content;
+          gap: 1rem;
+
+          .col {
+            display: flex;
+            flex-direction: column;
+          }
+        }
+
+        .problem {
+          border-left: 4px #b26767 solid;
+          padding-left: 1rem;
+        }
+
+        .solution {
+          border-left: 4px #5d9087 solid;
+          padding-left: 1rem;
+          align-self: flex-start;
+        }
+
+        .bold {
+          font-weight: 500;
+        }
+      }
+
+      span {
+        width: fit-content;
+      }
+    }
+  }
 }
