--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div id="footer" class="footer">
   <span class="info">
     <img class="icon" src="../../assets/icons/mail.svg" />
     <a
