--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,22 +1,18 @@
+@import "../../styles.scss";
+
 .footer {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 5.25rem;
   font-size: 1rem;
+  font-weight: 500;
   gap: 3.5rem;
+  border-top: 1px var(--border-color-first) solid;
 
   .info {
     display: flex;
     align-items: center;
-
-    .link {
-      color: #4f4f4f;
-    }
-
-    .underline {
-      text-decoration: none;
-    }
 
     .icon {
       margin-right: 0.5rem;
