--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+@import "assets/colors";
+@import "assets/mixins";
+
 html,
 body {
   width: 100%;
@@ -7,6 +10,7 @@ body {
 body {
   margin: 0;
   font-family: Inter;
+  color: var(--text-color);
 }
 
 .cdk-overlay-pane {
@@ -17,3 +21,47 @@ body {
     align-items: center;
   }
 }
+
+.title {
+  font-size: 1.75rem;
+  font-weight: 600;
+}
+
+.headers {
+  @extend .paragraph-gap-1;
+
+  .sub-title {
+    font-size: 1.25rem;
+    font-weight: 500;
+  }
+}
+
+.text-bold {
+  font-weight: 500;
+}
+
+.section {
+  @extend .paragraph-gap-2;
+
+  padding-left: 25rem;
+}
+
+.header {
+  font-size: 5rem;
+  font-weight: 700;
+}
+
+.sub-title {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.link {
+  color: var(--text-color);
+}
+
+.underline {
+  text-decoration: none;
+}
+
+@include paragraph();
